apps/medium-place/outline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
spec:
  selector:
    app: outline
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
